# pulseshitter

./: .gitignore  Cargo.toml  README.md
src/: app.rs  audio.rs  dickcord.rs  main.rs  main_old.rs  pulse.rs  state.rs
src/audio/: analysis.rs  mod.rs  parec.rs  pulse.rs  source.rs  system.rs
src/dickcord/: bot.rs  mod.rs  system.rs
src/interface/: animation.rs  app_selector.rs  audio_module.rs  dashboard.rs  discord_module.rs  field.rs  meter.rs  mod.rs  setup.rs  splash.rs  view.rs
src/interface/components/: mod.rs  text_field.rs
src/interface/dashboard/: discord_module.rs  meter.rs  mod.rs  settings_module.rs  source_selector.rs  version.rs
src/interface/setup/: form.rs  mod.rs
src/interface_old/: audio_module.rs  discord_module.rs  mod.rs  setup.rs
src/state/: mod.rs
