[package]
name = "pulseshitter"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulsectl-rs = "0.3.2"
songbird = "0.3.2"
serenity = {version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "voice"]}
tokio = {version = "1.26.0", features = ["full"]}
tui = "0.19"
crossterm = "0.25"

fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"