[package]
name = "pulseshitter"
version = "1.0.1"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulsectl-rs = "0.3.2"
ringbuf = "0.3.3"
serde = "1.0.156"
ron = "0.8.0"
crossbeam = "0.8.2"
songbird = "0.3.2"
serenity = {version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "voice"]}
tokio = {version = "1.26.0", features = ["full"]}
tui = "0.19"
tui-textarea = "0.2.0"
crossterm = "0.25"
enum-iterator = "1.4.0"
regex = "1.7.3"
lazy_static = "1.4.0"